--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./client
+
     steps:
       - uses: actions/checkout@v4
 
@@ -24,13 +28,10 @@ jobs:
           version: 10
 
       - name: Install dependencies
-        working-directory: ./client
         run: pnpm install
 
       - name: Build
-        working-directory: ./client
         run: pnpm build
 
       - name: Type check
-        working-directory: ./client
         run: pnpm typecheck
