--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/index.ts",
+    "start": "node dist/main.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/main.ts",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
