--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -9,6 +9,7 @@ services:
       - 3172:3172
     environment:
       - NODE_ENV=development
+      - TEST_MODE=false
     volumes:
       - ./client:/app
       - /app/node_modules
