--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkoutv4
+      - uses: actions/checkout@v4
 
       - name: 'Set up .env file'
         working-directory: 'client/'
