--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -38,6 +38,7 @@ jobs:
           file: client/Dockerfile
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          outputs: type=docker
 
       - name: 'Test login'
         run: docker run --rm discord-bot:ci-test
