--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -33,7 +33,7 @@ jobs:
           context: client
           push: false
           tags: discord-bot:ci-test
-          target: development
+          target: production
           platforms: linux/amd64
           file: client/Dockerfile
           cache-from: type=gha
