--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,7 @@ FROM node:22.16-bookworm AS development
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@latest --activate
 COPY package*.json pnpm-lock.yaml ./
-RUN pnpm install
+RUN pnpm install --frozen-lockfile
 COPY . . 
 CMD ["pnpm", "run", "dev"]
 
@@ -11,7 +11,12 @@ CMD ["pnpm", "run", "dev"]
 FROM node:22.16-bookworm-slim AS production
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@latest --activate
+
+# Copy package files
 COPY package*.json pnpm-lock.yaml ./
-RUN pnpm install --prod
+RUN pnpm install --frozen-lockfile --prod
+
+# Copy source files
 COPY . .
+RUN pnpm build
 CMD ["pnpm", "start"]
