--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.4.2"
   }
 }
