ci: added docker check for ci (#7)
* ci: added docker check for ci

* fix: updated ci

* fix:edit docker-ci.yml file and fixed action typo

* refactor: refactored main ts code to be more idiomatic, contain environment validation

* ci: added a test login step to docker-ci

* fix: added type=docker to allow image to be accessible

* fix: added proper production level Dockerfile

* fix: properly remove dev dependencies after building

* fix: added typescript dep

* refactor: major refactor to code to properly handle docker builds. Removed ES Modules and switched to CommonJS to avoid issues with importing and ts issues.

* fix: fixed lock-file and package.json

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,15 +3,22 @@ FROM node:22.16-bookworm AS development
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@latest --activate
 COPY package*.json pnpm-lock.yaml ./
-RUN pnpm install
-COPY . .
+RUN pnpm install --frozen-lockfile
+COPY . . 
 CMD ["pnpm", "run", "dev"]
 
 # Production stage
 FROM node:22.16-bookworm-slim AS production
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@latest --activate
+
+# Copy package files
 COPY package*.json pnpm-lock.yaml ./
-RUN pnpm install --prod
+RUN pnpm install --frozen-lockfile
+
+# Copy source files
 COPY . .
+RUN pnpm build
+RUN pnpm prune --prod
+
 CMD ["pnpm", "start"]
