--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "dependencies": {
     "discord.js": "^14.19.3",
@@ -7,12 +6,13 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsx' src/main.ts",
+    "build": "NODE_ENV=production tsc",
+    "start": "NODE_ENV=production node dist/main.js",
+    "dev": "NODE_ENV=development nodemon --watch 'src/**/*.ts' --exec 'tsx' src/main.ts",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.4.2"
   }
 }
