--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  client-build:
     runs-on: ubuntu-latest
 
     defaults:
@@ -35,3 +35,24 @@ jobs:
 
       - name: Build
         run: pnpm run build
+
+  backend-build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install poetry
+        run: pipx install poetry
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+          cache: 'poetry'
+      - name: Install dependencies
+        run: poetry install
+      - name: Check Poetry environment
+        run: poetry check
+      - name: Run tests
+        run: poetry run pytest
